--- a/templates/index.html
+++ b/templates/index.html
@@ -126,15 +126,6 @@
                 
               </div>
             </div>
-{#            <div class="header-local"><a class="ru" href="/ru/branch-network/?filter=all">Филиальная сеть</a></div>#}
-{#            <div class="dropdown">#}
-{#              <div class="title">Обратная связь<span class="icon"></span></div>#}
-{#              <div class="drop-content">#}
-{#                #}
-{#                  <a class="item" href="https://salymfinance.kg/contacts/">Обратная связь</a>#}
-{#                #}
-{#              </div>#}
-{#            </div>#}
           <div class="social-link-all">
           <a class="whatsapp" href="https://www.instagram.com/salymfinancekg/"></a>
           <a class="insta" href="https://www.instagram.com/salymfinancekg/"></a>
@@ -464,7 +455,7 @@
                     </div>
                 </div>
             </div>
-          
+
 
             <div class="slider-img"><img src="{%  static 'img/jpg/mn1.jpg' %}" alt="load img">
                 <div class="container">
@@ -575,113 +566,113 @@
             </div>
           </div>
         </section>
-        
+
 <section class="news-section">
   <div class="news-section__heading">
     <h2>Новости</h2>
     <div class="button"><a href="/ru/about/news/">Все новости</a></div>
   </div>
   <div class="card-all">
-    
+
     <div class="card">
       <div class="news-section__card">
         <div class="date">27 июля 2022 г.</div>
         <p>Филиал “Бишкек-Восток” переехал в новый офис по адресу: пр. Чуй 26/ул. 7 апреля.</p><a href="/ru/about/news/filial-bishkek-vostok-pereehal-v-novyj-ofis-po-adr/"></a>
       </div>
     </div>
-    
+
     <div class="card">
       <div class="news-section__card">
         <div class="date">18 июля 2022 г.</div>
         <p>Открытие нового представительства в с. Ат-Башы</p><a href="/ru/about/news/otkrytie-novogo-predstavitelstva-v-s-bashy/"></a>
       </div>
     </div>
-    
+
     <div class="card">
       <div class="news-section__card">
         <div class="date">7 июля 2022 г.</div>
         <p>График работы в предстоящий праздник.</p><a href="/ru/about/news/grafik-raboty-v-predstoyashij-prazdnik/"></a>
       </div>
     </div>
-    
+
     <div class="card">
       <div class="news-section__card">
         <div class="date">24 июня 2022 г.</div>
         <p>Официальное открытие нового представительства МФК «Салым Финанс» в г. Кочкор-Ата.</p><a href="/ru/about/news/oficialnoe-otkrytie-novogo-predstavitelstva-mfk-sa/"></a>
       </div>
     </div>
-    
+
   </div>
 </section>
-        <section class="exchange-rates" id="checkboxForm">
-          <div class="exchange-rates__content">
-            
+<section class="exchange-rates" id="checkboxForm">
+<div class="exchange-rates__content">
+
 <div class="exchange-rates__tabs">
   <div class="calculate-credit__heading">
     <h2>Курсы</h2>
     <p>Курс актуален на 23 августа 2022 г. 8:55</p>
   </div>
   <div class="exchange-rates__but-all">
-    <div class="exchange-rates__but tabs-button-js">Наличные</div>
-      <div class="exchange-rates__but tabs-button-js">Безналичные</div>
+{#    <div class="exchange-rates__but tabs-button-js">Наличные</div>#}
+{#      <div class="exchange-rates__but tabs-button-js">Безналичные</div>#}
     <div class="exchange-rates__but tabs-button-js">Курсы НБКР</div>
   </div>
   <div class="exchange-rates__tabs-con-all">
-    <div class="exchange-rates__tabs-con tabs-content-js">
-      <div class="exchange-rates__row">
-        <div class="currency">Валюта</div>
-        <div class="buy">Покупка</div>
-        <div class="sale">Продажа</div>
-      </div>
-      <div class="exchange-rates__row">
-        <div class="currency">USD</div>
-        <div class="buy">81,5000</div>
-        <div class="sale">82,5000</div>
-      </div>
-      <div class="exchange-rates__row">
-        <div class="currency">EUR</div>
-        <div class="buy">83,0000</div>
-        <div class="sale">84,0000</div>
-      </div>
-      <div class="exchange-rates__row">
-        <div class="currency">RUB</div>
-        <div class="buy">1,3000</div>
-        <div class="sale">1,3700</div>
-      </div>
-      <div class="exchange-rates__row">
-        <div class="currency">KZT</div>
-        <div class="buy">0,1100</div>
-        <div class="sale">0,1900</div>
-      </div>
-    </div>
-    
-      <div class="exchange-rates__tabs-con tabs-content-js">
-      <div class="exchange-rates__row">
-        <div class="currency">Валюта</div>
-        <div class="buy">Покупка</div>
-        <div class="sale">Продажа</div>
-      </div>
-      <div class="exchange-rates__row">
-        <div class="currency">USD</div>
-        <div class="buy">81,5000</div>
-        <div class="sale">82,5000</div>
-      </div>
-      <div class="exchange-rates__row">
-        <div class="currency">EUR</div>
-        <div class="buy">83,0000</div>
-        <div class="sale">84,0000</div>
-      </div>
-      <div class="exchange-rates__row">
-        <div class="currency">RUB</div>
-        <div class="buy">1,3000</div>
-        <div class="sale">1,3700</div>
-      </div>
-      <div class="exchange-rates__row">
-        <div class="currency">KZT</div>
-        <div class="buy">0,1100</div>
-        <div class="sale">0,1900</div>
-      </div>
-    </div>
+{#    <div class="exchange-rates__tabs-con tabs-content-js">#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">Валюта</div>#}
+{#        <div class="buy">Покупка</div>#}
+{#        <div class="sale">Продажа</div>#}
+{#      </div>#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">USD</div>#}
+{#        <div class="buy">81,5000</div>#}
+{#        <div class="sale">82,5000</div>#}
+{#      </div>#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">EUR</div>#}
+{#        <div class="buy">83,0000</div>#}
+{#        <div class="sale">84,0000</div>#}
+{#      </div>#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">RUB</div>#}
+{#        <div class="buy">1,3000</div>#}
+{#        <div class="sale">1,3700</div>#}
+{#      </div>#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">KZT</div>#}
+{#        <div class="buy">0,1100</div>#}
+{#        <div class="sale">0,1900</div>#}
+{#      </div>#}
+{#    </div>#}
+
+{#      <div class="exchange-rates__tabs-con tabs-content-js">#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">Валюта</div>#}
+{#        <div class="buy">Покупка</div>#}
+{#        <div class="sale">Продажа</div>#}
+{#      </div>#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">USD</div>#}
+{#        <div class="buy">81,5000</div>#}
+{#        <div class="sale">82,5000</div>#}
+{#      </div>#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">EUR</div>#}
+{#        <div class="buy">83,0000</div>#}
+{#        <div class="sale">84,0000</div>#}
+{#      </div>#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">RUB</div>#}
+{#        <div class="buy">1,3000</div>#}
+{#        <div class="sale">1,3700</div>#}
+{#      </div>#}
+{#      <div class="exchange-rates__row">#}
+{#        <div class="currency">KZT</div>#}
+{#        <div class="buy">0,1100</div>#}
+{#        <div class="sale">0,1900</div>#}
+{#      </div>#}
+{#    </div>#}
     <div class="exchange-rates__tabs-con tabs-content-js">
       <div class="exchange-rates__row">
         <div class="currency">Валюта</div>
@@ -750,48 +741,48 @@
                     :disabled="!isCheckbox">Отправить</button>
               </form>
             </div>
-          </div>
-        </section>
-
-        
-        <section class="mortgage">
-          <div class="mortgage-banner" style="background-image: url(/media/%D0%BD%D0%B8%D0%B6%D0%BD%D0%B8%D0%B9_%D0%B1%D0%B0%D0%BD%D0%BD%D0%B5%D1%80.png.1216x420_q85_box-0%2C0%2C5079%2C1762_crop_detail.png)">
-            <h2>Депозиты &quot;Салым&quot; и &quot;Салым Плюс&quot;</h2>
-            <p>Приумножьте свой капитал с высокодоходными депозитами от &quot;Салым Финанс&quot;!
-Доходность до 18% в сомах!
-До 7% в долларах США! 
-Возможность капитализации.</p>
-            <div class="grid">
-              
-            </div><a href="https://salymfinance.kg/ru/deposit/deposit-salym/">Подробнее</a>
-          </div>
-        </section>
-        
+</div>
+</section>
 
 
-        <section class="our-awards">
-          <div class="calculate-credit__heading">
-            <h2>Наши сертификаты</h2>
-            <p>Подтверждения о соответствии</p>
-          </div>
-          <div class="our-awards__content">
-            <div class="card-all" id="selector-gallery">
-              
-              <div class="card" data-src="/media/FR-certificate-Salym-Finance-Kyrgyz-republic-Sep19-1-1024x709_Q1gMo8c_YlpkNEH.webp">
-                <div class="our-awards-img"><img src="/media/FR-certificate-Salym-Finance-Kyrgyz-republic-Sep19-1-1024x709_Q1gMo8c_YlpkNEH.webp" alt="load img"/></div>
-              </div>
-              
-              <div class="card" data-src="/media/certificate_deposit_2xkobvB_J6TtQe8_SXiU8xI.webp">
-                <div class="our-awards-img"><img src="/media/certificate_deposit_2xkobvB_J6TtQe8_SXiU8xI.webp" alt="load img"/></div>
-              </div>
-              
-              <div class="card" data-src="/media/certificate-1024x778_OnJxVbx_QlvGTTF_yTuzdUy.webp">
-                <div class="our-awards-img"><img src="/media/certificate-1024x778_OnJxVbx_QlvGTTF_yTuzdUy.webp" alt="load img"/></div>
-              </div>
-              
-            </div>
-          </div>
-        </section>
+{#        <section class="mortgage">#}
+{#          <div class="mortgage-banner" style="background-image: url(/media/%D0%BD%D0%B8%D0%B6%D0%BD%D0%B8%D0%B9_%D0%B1%D0%B0%D0%BD%D0%BD%D0%B5%D1%80.png.1216x420_q85_box-0%2C0%2C5079%2C1762_crop_detail.png)">#}
+{#            <h2>Депозиты &quot;Салым&quot; и &quot;Салым Плюс&quot;</h2>#}
+{#            <p>Приумножьте свой капитал с высокодоходными депозитами от &quot;Салым Финанс&quot;!#}
+{#Доходность до 18% в сомах!#}
+{#До 7% в долларах США! #}
+{#Возможность капитализации.</p>#}
+{#            <div class="grid">#}
+{#              #}
+{#            </div><a href="https://salymfinance.kg/ru/deposit/deposit-salym/">Подробнее</a>#}
+{#          </div>#}
+{#        </section>#}
+
+
+
+{#        <section class="our-awards">#}
+{#          <div class="calculate-credit__heading">#}
+{#            <h2>Наши сертификаты</h2>#}
+{#            <p>Подтверждения о соответствии</p>#}
+{#          </div>#}
+{#          <div class="our-awards__content">#}
+{#            <div class="card-all" id="selector-gallery">#}
+{#              #}
+{#              <div class="card" data-src="/media/FR-certificate-Salym-Finance-Kyrgyz-republic-Sep19-1-1024x709_Q1gMo8c_YlpkNEH.webp">#}
+{#                <div class="our-awards-img"><img src="/media/FR-certificate-Salym-Finance-Kyrgyz-republic-Sep19-1-1024x709_Q1gMo8c_YlpkNEH.webp" alt="load img"/></div>#}
+{#              </div>#}
+{#              #}
+{#              <div class="card" data-src="/media/certificate_deposit_2xkobvB_J6TtQe8_SXiU8xI.webp">#}
+{#                <div class="our-awards-img"><img src="/media/certificate_deposit_2xkobvB_J6TtQe8_SXiU8xI.webp" alt="load img"/></div>#}
+{#              </div>#}
+{#              #}
+{#              <div class="card" data-src="/media/certificate-1024x778_OnJxVbx_QlvGTTF_yTuzdUy.webp">#}
+{#                <div class="our-awards-img"><img src="/media/certificate-1024x778_OnJxVbx_QlvGTTF_yTuzdUy.webp" alt="load img"/></div>#}
+{#              </div>#}
+{#              #}
+{#            </div>#}
+{#          </div>#}
+{#        </section>#}
 
       </div>
     </main>
@@ -896,6 +887,7 @@
               <li><a href="/ru/bank-details/requisite/">Реквизиты пополнения депозита</a></li>
             </ul>
             <div class="social-link-all">
+          <a class="whatsapp" href="https://www.instagram.com/salymfinancekg/">Whatsapp</a>
           <a class="insta" href="https://www.instagram.com/salymfinancekg/">Instagram</a>
           <a class="facebook" href="https://www.facebook.com/salymfinance/">Facebook</a>
         </div>
