Added models for Financing and News apps

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -4,7 +4,7 @@
   <main class="about-company">
     <div class="crumb">
       <div class="container">
-        <div class="crumb-content"><a href="/">Главная</a><a
+        <div class="crumb-content"><a href="/static">Главная</a><a
             href="#">О нас</a></div>
       </div>
     </div>
