--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -4,7 +4,7 @@
 <main class="contact"></main>
 <div class="crumb">
   <div class="container">
-      <div class="crumb-content"><a href="/">Главная</a><a href="#">Контакты</a></div>
+      <div class="crumb-content"><a href="/static">Главная</a><a href="#">Контакты</a></div>
   </div>
 </div>
 <div class="container">
