--- a/templates/financing/financing_detail.html
+++ b/templates/financing/financing_detail.html
@@ -142,7 +142,7 @@
           <div class="navigation">
             <ul>
 
-<li><a href="/">Главная</a></li>
+<li><a href="/static">Главная</a></li>
 <li><a href="/about_us" >О нас</a></li>
 <li><a href="/financing_list">Финансирования</a></li>
 <li><a  href="/partners">Партнеры</a></li>
@@ -165,7 +165,7 @@
           <div class="icon-hamburger"><span></span><span></span><span></span><span></span></div>
         </div>
       </div>
-      <div class="logo"><a href="/ru/"><img src="/static/img/svg/logo.svg" alt="load img"/></a></div>
+      <div class="logo"><a href="/ru/"><img src="/img/svg/logo.svg" alt="load img"/></a></div>
       <div class="header-search"><a href="/ru/search/"></a></div>
     </div>
     </div>
@@ -174,7 +174,7 @@
 <main class="credit-detail" id="app">
   <div class="crumb">
     <div class="container">
-      <div class="crumb-content"><a href="/">Главная</a><a href="/financing_list">Финансирования</a><a href="#">Ипотека</a></div>
+      <div class="crumb-content"><a href="/static">Главная</a><a href="/financing_list">Финансирования</a><a href="#">Ипотека</a></div>
     </div>
   </div>
   
@@ -182,7 +182,7 @@
   
     <div class="container">
       <div class="credit-detail__banner-img">
-          <img src="/media/credit/1_1dR5lwh.png.740x440_q85_box-15%2C0%2C4350%2C2573_crop_detail.png" alt="load img"/>
+          <img src="/media/credit/1_1dR5lwh.png.740x440_q85_box-15,0,4350,2573_crop_detail.png" alt="load img"/>
       </div>
       <div class="banner-description">
         <div>
