--- a/templates/financing/financing_list.html
+++ b/templates/financing/financing_list.html
@@ -6,7 +6,7 @@
       <div class="crumb">
         <div class="container">
           <div class="crumb-content">
-              <a href="/">Главная</a>
+              <a href="/static">Главная</a>
               <a>Финансирования</a>
           </div>
         </div>
@@ -28,7 +28,7 @@
               <div class="credit-card-but"><a href="/financing_list/financing_detail">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BD%D0%B8%D0%B8_%D0%B8%D0%BF%D0%BE%D1%82%D0%B5%D0%BA%D0%B0.png.250x400_q85_box-128%2C0%2C1388%2C2014_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/последнии_ипотека.png.250x400_q85_box-128,0,1388,2014_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -47,7 +47,7 @@
               <div class="credit-card-but"><a href="/ru/credit/credit-za-chas">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D0%BA%D1%80%D0%B5%D0%B4%D0%B8%D1%82_%D0%B7%D0%B0_%D1%87%D0%B0%D1%81_NQ0w6iM.png.250x400_q85_box-1342713782014_crop_detail_WDLhBnS.png.250x400_q85_box-1%2C0%2C250%2C399_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/кредит_за_час_NQ0w6iM.png.250x400_q85_box-1342713782014_crop_detail_WDLhBnS.png.250x400_q85_box-1,0,250,399_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -65,7 +65,7 @@
               <div class="credit-card-but"><a href="/ru/credit/credit-na-obrazovanie">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D1%88%D0%B0%D0%BF%D0%BA%D0%B0_y6XT3Hh.png.250x400_q85_box-108%2C0%2C1368%2C2014_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/шапка_y6XT3Hh.png.250x400_q85_box-108,0,1368,2014_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -83,7 +83,7 @@
               <div class="credit-card-but"><a href="/ru/credit/teplo-i-comfort">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D0%B8%D0%BF%D0%BE%D1%82%D0%B5%D0%BA%D0%B0_%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BD%D0%B8%D0%B8_XVYDQoC.png.250x400_q85_box-0%2C0%2C375%2C600_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/ипотека_последнии_XVYDQoC.png.250x400_q85_box-0,0,375,600_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -101,7 +101,7 @@
               <div class="credit-card-but"><a href="/ru/credit/potrebitelskij-kredit">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D0%BF%D0%BE%D1%82%D1%80%D0%B5%D0%B1_%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BD%D0%B8%D0%B9_MXs3WG4.png.250x400_q85_box-229027424017_crop_detail.png.250x400_q85_box-0%2C0%2C249%2C400_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/потреб_последний_MXs3WG4.png.250x400_q85_box-229027424017_crop_detail.png.250x400_q85_box-0,0,249,400_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -119,7 +119,7 @@
               <div class="credit-card-but"><a href="/ru/credit/agrocredit">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D0%B0%D0%B3%D1%80%D0%BE_YTh4Yl1_1QylURa.png.250x400_q85_box-430%2C0%2C5471%2C8056_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/агро_YTh4Yl1_1QylURa.png.250x400_q85_box-430,0,5471,8056_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -137,7 +137,7 @@
               <div class="credit-card-but"><a href="/ru/credit/stroitelstvo-i-remont">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D1%81%D1%82%D1%80%D0%BE%D0%B9_%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BD%D0%B8%D0%B9_35dbjcA.png.250x400_q85_box-2%2C0%2C376%2C598_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/строй_последний_35dbjcA.png.250x400_q85_box-2,0,376,598_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -156,7 +156,7 @@
               <div class="credit-card-but"><a href="/ru/credit/business-credit">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D0%B1%D0%B8%D0%B7%D0%BD%D0%B5%D1%81_%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BD%D0%B8%D0%B8_vHzgyn9.png.250x400_q85_box-108%2C0%2C1368%2C2014_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/бизнес_последнии_vHzgyn9.png.250x400_q85_box-108,0,1368,2014_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -174,7 +174,7 @@
               <div class="credit-card-but"><a href="/ru/credit/Business-Mortgage">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/commercial_mortgage_ggMqCIZ.png.250x400_q85_box-457%2C0%2C5498%2C8056_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/commercial_mortgage_ggMqCIZ.png.250x400_q85_box-457,0,5498,8056_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
@@ -192,7 +192,7 @@
               <div class="credit-card-but"><a href="/ru/credit/credit-na-refinansirovanie">Подробнее</a></div>
               <div class="credit-card-img">
                   
-                  <img src="/media/credit/%D1%834%D0%BA%D1%83%D0%B5%D1%83.png.250x400_q85_box-430%2C0%2C5471%2C8056_crop_detail.png" alt="load img"/>
+                  <img src="/media/credit/у4куеу.png.250x400_q85_box-430,0,5471,8056_crop_detail.png" alt="load img"/>
                   
               </div>
             </div>
