--- a/templates/news/news_detail.html
+++ b/templates/news/news_detail.html
@@ -142,7 +142,7 @@
           <div class="navigation">
             <ul>
 
-<li><a href="/">Главная</a></li>
+<li><a href="/static">Главная</a></li>
 <li><a href="/about_us" >О нас</a></li>
 <li><a href="/financing_list">Финансирования</a></li>
 <li><a  href="/partners">Партнеры</a></li>
@@ -165,7 +165,7 @@
           <div class="icon-hamburger"><span></span><span></span><span></span><span></span></div>
         </div>
       </div>
-      <div class="logo"><a href="/ru/"><img src="/static/img/svg/logo.svg" alt="load img"/></a></div>
+      <div class="logo"><a href="/ru/"><img src="/img/svg/logo.svg" alt="load img"/></a></div>
       <div class="header-search"><a href="/ru/search/"></a></div>
     </div>
     </div>
@@ -174,7 +174,7 @@
 <main class="news-detail">
   <div class="crumb">
     <div class="container">
-      <div class="crumb-content"><a href="/">Главная</a><a href="/news_list">Новости</a><a href="#">Открытие представительства в г. Талас</a></div>
+      <div class="crumb-content"><a href="/static">Главная</a><a href="/news_list">Новости</a><a href="#">Открытие представительства в г. Талас</a></div>
     </div>
   </div>
   <div class="container">
