--- a/templates/sharia_board.html
+++ b/templates/sharia_board.html
@@ -4,7 +4,7 @@
 <main class="shareholders">
   <div class="crumb">
     <div class="container">
-      <div class="crumb-content"><a href="/">Главная</a><a>Шариатский совет</a></div>
+      <div class="crumb-content"><a href="/static">Главная</a><a>Шариатский совет</a></div>
     </div>
   </div>
   <section class="about-company-banner">
