--- a/templates/partners.html
+++ b/templates/partners.html
@@ -4,7 +4,7 @@
 <main class="partners">
   <div class="crumb">
     <div class="container">
-      <div class="crumb-content"><a href="/">Главная</a><a>Партнеры</a></div>
+      <div class="crumb-content"><a href="/static">Главная</a><a>Партнеры</a></div>
     </div>
   </div>
   <div class="container">
